--- a/css/contact.css
+++ b/css/contact.css
@@ -19,10 +19,6 @@
 	height: 350px;
 }
 
-/*.contact-form {
-	display: 
-}*/
-
 .footer {
 	margin-top: 3.5rem;
 	padding-left: 10rem;
